WebSocketTest jsp add, game controller-service-dao